Fix propagation bug when clicking search on mobile nav
Fix more contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,7 @@ a:focus {
 /* Text meant only for screen readers */
 .screen-reader-text {
   color: #000;
+  background: #FFF !important;
   clip: rect(1px, 1px, 1px, 1px);
   overflow: hidden;
   position: absolute !important;
@@ -639,6 +640,7 @@ body.logged-in #header_dropdown_container {
     padding-left: 110px; }
 
   .header-dropdown-menu > a {
+    color: #1B6B93;
     height: 50px;
     background: #eee; }
 
